--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>99 Lines of Code In The File</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1>My Singing Friends </h1>
-    <div class="friend">
-        <h3>Friend</h3>
-        <p>Test1</p>
-        <p>Test2</p>
-        <p>Test3</p>
-        <p>Test4</p>
-        <p>Test5</p>
-
+    <div class='container-fluid'>
+            <h1>My Singing Friends </h1>
+            <div class="friend">
+                <h3>Friend</h3>
+                <p>Test1</p>
+                <p>Test2</p>
+                <p>Test3</p>
+                <p>Test4</p>
+                <p>Test5</p>
+        
+            </div>
     </div>
+  
     <script src="99linesofcode.js"></script>
 </body>
-
 </html>
