Added bootstrap styles to div

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class='container-fluid'>
+    <div class='container'>
             <h1>My Singing Friends </h1>
-            <div class="friend">
+            <div class="friend border border-secondary rounded">
                 <h3>Friend</h3>
                 <p>Test1</p>
                 <p>Test2</p>
